Partie 1: Implémentation de l'injection dynamique via le setter avec Reflection API